# lyspeq

./: .bumpversion.cfg  .gitignore  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CreateSQLookUpTable.cpp  LyaPower3DEstimate  LyaPower3DEstimate.cpp  LyaPowerEstimate.cpp  LyaPowerxQmlExposure.cpp  Makefile  Makefile.in  README  README.md  bitbucket-pipelines.yml  cblas_tests.cpp  config.param  configure  lyspeqBootStats.cpp  test-fftconvolve  test.config  testBootstrapTime  testOMPTiming  testSQCMatrices  timeSetQMatrix
.github/workflows/: testing.yml
core/: bootstrapper.cuh  bootstrapper.hpp  chunk_estimate.cpp  chunk_estimate.cu  chunk_estimate.hpp  core.make  fiducial_cosmology.cpp  fiducial_cosmology.hpp  global.cpp  global.hpp  global_numbers.cpp  global_numbers.hpp  matrix_helper.cpp  matrix_helper.hpp  mpi_manager.hpp  mpi_merge_sort.cpp  omp_manager.hpp  one_qso_estimate.cpp  one_qso_estimate.hpp  progress.hpp  qe_redshift.hpp  quadratic_estimate.cpp  quadratic_estimate.cu  quadratic_estimate.hpp  real_field_1d.cpp  real_field_1d.hpp  spectograph_functions.cpp  spectograph_functions.hpp  spectrograph_functions.cpp  spectrograph_functions.hpp  sq_table.cpp  sq_table.hpp
cross/: cross_exposure.cpp  cross_exposure.hpp  exposure.cpp  exposure.hpp  one_qso_exposures.cpp  one_qso_exposures.hpp
gsltools/: discrete_interpolation.cpp  discrete_interpolation.hpp  fourier_integrator.cpp  fourier_integrator.hpp  gsltools.make  integrator.cpp  integrator.hpp  interpolation.cpp  interpolation.hpp  interpolation_2d.cpp  interpolation_2d.hpp  ln_poly_fit.cpp  ln_poly_fit.hpp  polynomial_fitter.cpp  polynomial_fitter.hpp  real_field.cpp  real_field.hpp
io/: bootstrap_file.cpp  bootstrap_file.hpp  config_file.cpp  config_file.hpp  io.make  io_helper_functions.cpp  io_helper_functions.hpp  logger.cpp  logger.hpp  myfitsio.hpp  picca_file.cpp  picca_file.hpp  qso_file.cpp  qso_file.hpp  sq_lookup_table.cpp  sq_lookup_table.hpp  sq_lookup_table_file.cpp  sq_lookup_table_file.hpp
mathtools/: bspline.cpp  bspline.hpp  cuda_helper.cu  cuda_helper.cuh  cuda_helper.hpp  discrete_interpolation.cpp  discrete_interpolation.hpp  fftlog.cpp  fftlog.hpp  fourier_integrator.cpp  interpolation.cpp  interpolation.hpp  interpolation_2d.cpp  interpolation_2d.hpp  mathutils.hpp  matrix_helper.cpp  matrix_helper.cu  matrix_helper.hpp  multipole_interpolation.cpp  multipole_interpolation.hpp  my_random.hpp  real_field.cpp  real_field.hpp  real_field_3d.cpp  real_field_3d.hpp  smoother.cpp  smoother.hpp  stats.cpp  stats.hpp
py/: binary_qso.py  lorentzian_fit.py  read_config.py  smbivspline.py
qu3d/: contmarg_file.hpp  cosmic_quasar.hpp  cosmology_3d.cpp  cosmology_3d.hpp  optimal_qu3d.cpp  optimal_qu3d.hpp  optimal_qu3d_extra.cpp  optimal_qu3d_mc.cpp  optimal_qu3d_ns_sqrt.cpp  optimal_qu3d_pade.cpp  ps2cf_2d.hpp  qu3d_file.hpp  sht.c  sht.h  sht_demo.c  sht_readme.txt
tests/: cblas_tests.cpp  compareTestResults.py  expected_output.txt  generate_test_deltafits.py  myfitsread.cpp  test-fftconvolve.cpp  testBootstrapTime.cpp  testOMPTiming.cpp  testPointRef.cpp  testReadingBootRealizations.cpp  testSQCMatrices.cpp  test_cuda_helper.cu  test_fftlog.cpp  test_utils.cpp  test_utils.hpp  timeMatrixOps.cpp  timeOversampMult.cpp  timeSetQMatrix.cpp
tests/input/: desilite_seed332298_id0_0_z2.4_lognormal.fits  flist-timer.txt  flist.txt  qu3d_test_config.txt  slist.txt  test.config  test_diagonal_ddiagmv.txt  test_symmatrix.txt  test_symmatrix_cholesky.txt  test_triu_cholesky.txt  testdelta.fits  timer.config
tests/truth/: expected_cblas_output.txt  expected_pointerref_output.txt  q0_matrix.txt  signal_R70000_dv20.0.fits  signal_matrix.txt  test_L_cholesky.txt  test_inverse_cholesky.txt  test_it1_matrices.fits  timer_qlast_matrix.txt  truth_dsymv.txt  truth_inverse_matrix.txt
